--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nelson-nextjsnext",
+  "name": "nelson-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "next-seo": "^4.23.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.8"
   }
 }
